Fix SingleTransactionSignerFactory logic for "unlocked" accounts